--- a/formatting.css
+++ b/formatting.css
@@ -1,240 +1,255 @@
 body {
-	margin: 0;
-	padding-right: 1vw;
-	background-attachment: fixed;
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+  margin: 0;
+  padding-right: 1vw;
+  background-attachment: fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
+button {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-width: 0;
+  cursor: pointer;
+  float:right;
+}
+
+button {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-width: 0;
+  cursor: pointer;
+  float:right;
+}
+
+
 #overlay{
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background-color:black;
-	z-index:-1;
-	float: left;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:black;
+  z-index:-1;
+  float: left;
 }
 
 .fade {
   transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out;	
+  -webkit-transition: opacity .25s ease-in-out;
 }
 
 
 a.no_underline {
-	text-decoration: none;	
+  text-decoration: none;
 }
 
 .post_area {
-	height: 95vh;
-	width: 48%;
-	background-color:rgba(255, 255, 255, 0.3);
-	padding: 1vw;
-	margin: 1%;
-	float: right;
-	box-sizing: border-box;
-	display: flex;
-	flex-flow: column;
+  height: 95vh;
+  width: 48%;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 1vw;
+  margin: 1%;
+  float: right;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column;
 }
 
 .post_area .section_header {
-	flex: 0 1 auto;
+  flex: 0 1 auto;
 }
 
 .post_area .list_wrapper {
-	flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 .wide_area {
-	max-height: 95vh;
-	width: 46vw;
-	background-color:rgba(255, 255, 255, 0.3);
-	padding: 1vw;
-	margin: 1vw;
-	float: left;
-	box-sizing: border-box;
-	display: flex;
-	flex-flow: column;
+  max-height: 95vh;
+  width: 46vw;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 1vw;
+  margin: 1vw;
+  float: left;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column;
 }
 
 .wide_area .section_header {
-	flex: 0 1 auto;	
+  flex: 0 1 auto;
 }
 
 .wide_area .list_wrapper {
-	flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 .group {
-	max-height: 95vh;
-	width: 46vw;
-	padding: 0;
-	margin: 1vw;
-	float: left;
-	box-sizing: border-box;
+  max-height: 95vh;
+  width: 46vw;
+  padding: 0;
+  margin: 1vw;
+  float: left;
+  box-sizing: border-box;
 }
 
 @media only screen and (max-width: 1060px) {
-	.group {
-		width: 94vw;
-	}
+  .group {
+    width: 94vw;
+  }
 
-	.wide_area {
-		width: 94vw;
-	}
+  .wide_area {
+    width: 94vw;
+  }
 }
 
 @media only screen and (min-width: 1600px) {
-	.group {
-		width: 30vw;
-	}
+  .group {
+    width: 30vw;
+  }
 
-	.wide_area {
-		width: 30vw;
-	}
+  .wide_area {
+    width: 30vw;
+  }
 }
 
 .section_header {
-	font-family: 'Josefin Sans';
-	padding: 0.5em 0em 0.5em 0em;
-	margin-bottom: 0.2em;
-	text-align: center;
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
-	font-size: 2em;
-	color: #FFF;
+  font-family: 'Josefin Sans';
+  padding: 0.5em 0em 0.5em 0em;
+  margin-bottom: 0.2em;
+  text-align: center;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+  font-size: 2em;
+  color: #FFF;
 }
 
 @media only screen and (max-width: 560px) {
-	.section_header {
-		font-size: 1.6em;
-	}
+  .section_header {
+    font-size: 1.6em;
+  }
 }
 
 
 .hackernews_header {
-	background-color: #FF6600;
-	border-top: 0.25em solid #FF8822;
+  background-color: #FF6600;
+  border-top: 0.25em solid #FF8822;
 }
 
 .reddit_header {
-	background-color: orangered;
-	border-top: 0.25em solid #FF8540;		
+  background-color: orangered;
+  border-top: 0.25em solid #FF8540;
 }
 
 .notes_header {
-	background-color: #9F509F;
-	border-top: 0.25em solid #BD75BF;
+  background-color: #9F509F;
+  border-top: 0.25em solid #BD75BF;
 }
 
 .todo_header {
-	background-color: #00BFFF;
-	border-top: 0.25em solid #87CEFA;
+  background-color: #00BFFF;
+  border-top: 0.25em solid #87CEFA;
 }
 
 .invisible {
-	opacity: 0;
+  opacity: 0;
 }
 
 #note_list {
-	padding: 0;
-	padding-bottom: 1em;
+  padding: 0;
+  padding-bottom: 1em;
 }
 
 #todo_list {
-	padding: 0;
-	padding-bottom: 1em;	
+  padding: 0;
+  padding-bottom: 1em;
 }
 
 .wide_area::-webkit-scrollbar {
-	width: 0px;  /* remove scrollbar space */
-	background: transparent; /* make scrollbar transparent */
+  width: 0px;  /* remove scrollbar space */
+  background: transparent; /* make scrollbar transparent */
 }
 
 .list_wrapper {
-	max-height: 100%;
-	overflow: scroll;
-	overflow-x: hidden;	
+  max-height: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .list_wrapper::-webkit-scrollbar {
-	width: 0px;  /* remove scrollbar space */
-	background: transparent; /* make scrollbar transparent */
+  width: 0px;  /* remove scrollbar space */
+  background: transparent; /* make scrollbar transparent */
 }
 
 .post {
-	font-family: "Roboto";
-	background: #F4F4F4;
-	margin-bottom: 1em;
-	text-align: left;
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
-	color: #111;
+  font-family: "Roboto";
+  background: #F4F4F4;
+  margin-bottom: 1em;
+  text-align: left;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+  color: #111;
 }
 
 .hackernews_post {
-	border-top: 0.25em solid #FF6600;
+  border-top: 0.25em solid #FF6600;
 }
 
 .reddit_post {
-	border-top: 0.25em solid orangered;	
+  border-top: 0.25em solid orangered;
 }
 
 .note_handle {
-	background-color: #9F509F;
-	height: 0.25em;
-	width: 100%;
-	cursor: move;
-	cursor: -webkit-grabbing;
+  background-color: #9F509F;
+  height: 0.25em;
+  width: 100%;
+  cursor: move;
+  cursor: -webkit-grabbing;
 }
 
 .todo_handle {
-	background-color: #00BFFF;
-	height: 0.25em;
-	width: 100%;
-	cursor: move;
-	cursor: -webkit-grabbing;
+  background-color: #00BFFF;
+  height: 0.25em;
+  width: 100%;
+  cursor: move;
+  cursor: -webkit-grabbing;
 }
 
 @media only screen and (max-width: 1060px) {
-	.note_handle {
-		height: 0.5em;
-	}
+  .note_handle {
+    height: 0.5em;
+  }
 
-	.todo_handle {
-		height: 0.5em;
-	}
+  .todo_handle {
+    height: 0.5em;
+  }
 }
 
 .note_content {
-	margin: 1em;
+  margin: 1em;
 }
 
 .todo_content {
-	margin: 1em;
+  margin: 1em;
 }
 
 /* https://paulund.co.uk/how-to-style-a-checkbox-with-css */
 .todo_checkbox {
-	width: 3em;
-	height: 3em;
-	margin-right: 1em;
-	float: left;
-	position: relative;
+  width: 3em;
+  height: 3em;
+  margin-right: 1em;
+  float: left;
+  position: relative;
 }
 
 .todo_checkbox label {
-	cursor: pointer;
-	position: absolute;
-	width: 3em;
-	height: 3em;
-	top: 0;
-	left: 0;
-	background: #eee;
-	border:1px solid #ddd;
+  cursor: pointer;
+  position: absolute;
+  width: 3em;
+  height: 3em;
+  top: 0;
+  left: 0;
+  background: #eee;
+  border:1px solid #ddd;
 }
 
 .todo_checkbox label:after {
@@ -259,70 +274,70 @@ a.no_underline {
 
 
 .draggable_post {
-	float: left;
-	list-style-type: none;
-	margin-right: 1em;
+  float: left;
+  list-style-type: none;
+  margin-right: 1em;
 }
 
 .title {
-	padding: 1em 1em 0em 1em;
-	color: #111;
+  padding: 1em 1em 0em 1em;
+  color: #111;
 }
 
 .title:hover {
-	color: #888;
+  color: #888;
 }
 
 .details {
-	padding: 0em 1.2em 1.2em 1.2em; /* 0.8 * 1.2 = 1 */
-	font-size: 0.8em;
-	color: #333;
+  padding: 0em 1.2em 1.2em 1.2em; /* 0.8 * 1.2 = 1 */
+  font-size: 0.8em;
+  color: #333;
 }
 
 .details:hover {
-	color: #888;
+  color: #888;
 }
 
 .button {
-	color: #666;
-	font-size: 1em;
-	cursor: pointer;
-	background-color: Transparent;
-	border: none;
+  color: #666;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: Transparent;
+  border: none;
     overflow: hidden;
-	outline: none;
-	width: 100%;
-	padding-right: 1em;
-	padding-bottom: 0.5em;
-	text-align: right;
+  outline: none;
+  width: 100%;
+  padding-right: 1em;
+  padding-bottom: 0.5em;
+  text-align: right;
 }
 
 .button:hover {
-	color: #AAA;
+  color: #AAA;
 }
 
 .textbox {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 
-	width: 100%;
-	height: 70vh;
-	resize: none;
+  width: 100%;
+  height: 70vh;
+  resize: none;
 
-	font-family: 'Roboto';
-	font-size: 1em;
+  font-family: 'Roboto';
+  font-size: 1em;
 
-	margin-bottom: 0;
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+  margin-bottom: 0;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
 }
 
 .button_area {
-	font-family: "Roboto";
-	background: #F4F4F4;
-	text-align: left;
-	margin-top: -1vh;
-	padding: 2vh;
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
-	color: #111;
+  font-family: "Roboto";
+  background: #F4F4F4;
+  text-align: left;
+  margin-top: -1vh;
+  padding: 2vh;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+  color: #111;
 }
