--- a/formatting.css
+++ b/formatting.css
@@ -1,4 +1,5 @@
 body {
+  font-family: "Roboto";
   margin: 0;
   padding-right: 1vw;
   background-attachment: fixed;
@@ -13,10 +14,16 @@ button {
   border-width: 0;
   cursor: pointer;
   float:right;
+  font-size: 1em;
+  margin-bottom: 0.5em;
+}
+
+button:hover {
+  color: #777;
 }
 
 #overlay{
-  position:absolute;
+  position:fixed;
   top:0;
   left:0;
   width:100%;
@@ -27,9 +34,9 @@ button {
 }
 
 .fade {
-  transition: opacity .25s ease-in-out;
-  -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -webkit-transition: opacity .5s ease-in-out;
 }
 
 .spinner {
@@ -174,7 +181,7 @@ a.no_underline {
 }
 
 .section_header {
-  font-family: 'Josefin Sans';
+  font-family: 'Asul';
   padding: 0.5em 0em 0.5em 0em;
   margin-bottom: 0.2em;
   text-align: center;
@@ -220,11 +227,21 @@ a.no_underline {
 }
 
 #note_list {
+  font-family: 'Mate';
+  line-height: 1.2;
+  font-size: 1.1em;
   padding: 0;
   padding-bottom: 1em;
 }
 
+#note_list li {
+  padding-bottom: 0.3em;
+}
+
 #todo_list {
+  font-family: 'Mate';
+  line-height: 1.2;
+  font-size: 1.1em;
   padding: 0;
   padding-bottom: 1em;
 }
@@ -246,7 +263,6 @@ a.no_underline {
 }
 
 .post {
-  font-family: "Roboto";
   background: #F4F4F4;
   margin-bottom: 1em;
   text-align: left;
@@ -262,6 +278,9 @@ a.no_underline {
   border-top: 0.25em solid #008B26;
   max-height: 80vh;
   overflow-y: scroll;
+  font-family: 'Mate';
+  line-height: 1.2;
+  font-size: 1.1em;
 }
 
 .nlab_post::-webkit-scrollbar {
@@ -397,6 +416,8 @@ a.no_underline {
 .details {
   font-size: 0.8em;
   color: #333;
+  padding-top: 0.2em;
+  padding-bottom: 0.5em;;
 }
 
 .details:hover {
@@ -407,21 +428,22 @@ a.no_underline {
 
 }
 
-.button {
-  color: #666;
+.inline-button {
+  color: #555;
   font-size: 1em;
   cursor: pointer;
   background-color: Transparent;
   border: none;
   overflow: hidden;
   outline: none;
-  width: 100%;
   padding-right: 1em;
   padding-bottom: 0.5em;
+  padding-top: 0.5em;
   text-align: right;
+  float: left;
 }
 
-.button:hover {
+.inline-button:hover {
   color: #AAA;
 }
 
@@ -441,12 +463,40 @@ a.no_underline {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
 }
 
+.small-textbox {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  font-family: 'Mate';
+  line-height: 1.2;
+  font-size: 1.1em;
+
+  width: 100%;
+  height: 2.8em;
+  padding: 0.6em 1em;
+  resize: none;
+  margin-bottom: 0.4em;
+
+  border: 0;
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, .25);
+}
+
 .button_area {
   font-family: "Roboto";
   background: #F4F4F4;
   text-align: left;
   margin-top: -1vh;
   padding: 2vh;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+  color: #111;
+}
+
+.quick-to-do {
+  font-family: "Roboto";
+  background: #F4F4F4;
+  text-align: left;
+  padding: 0.5em;;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
   color: #111;
 }
