--- a/formatting.css
+++ b/formatting.css
@@ -11,6 +11,7 @@ body {
 
 button {
   background-color: rgba(255, 255, 255, 0.3);
+  color: #777;
   border-width: 0;
   cursor: pointer;
   float:right;
@@ -19,7 +20,7 @@ button {
 }
 
 button:hover {
-  color: #777;
+  color: #bbb;
 }
 
 #overlay{
@@ -496,7 +497,7 @@ a.no_underline {
   font-family: "Roboto";
   background: #F4F4F4;
   text-align: left;
-  padding: 0.5em;;
+  padding: 0.5em 0.75em 0em 0.75em;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
   color: #111;
   margin-bottom: 0.2em;
